# cc

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
src/cc/: __init__.py
src/cc/compression/: __init__.py  __main__.py  bit_reader.py  bit_writer.py  code_assignment.py  code_lengths.py  encode.py  exceptions.py  freq_tree.py  main.py  prefix_code.py
tests/compression/: test_code_assignment.py  test_code_lengths.py  test_freq_tree.py  test_main.py  test_prefix_code.py
