[project]
name = "cc"
version = "0.1.0"
description = "Coding Challenges (https://codingchallenges.fyi/) Implementations"
readme = "README.md"
authors = [
    { name = "Fadil Nohur", email = "fadil.nohur@outlook.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.7",
]
